Adicione modo claro

--- a/html.html
+++ b/html.html
@@ -29,16 +29,50 @@
 
                     <!-- Subitens do módulo HTML -->
                     <ul class="sub-items visible" data-module="html">
-                        <li class="file"><div class="file-link active" data-content-id="o-que-e"><span class="file-name">O que é</span></div></li>
-                        <li class="file"><div class="file-link" data-content-id="historia-evolucao"><span class="file-name">História / Evolução</span></div></li>
-                        <li class="file"><div class="file-link" data-content-id="como-funciona"><span class="file-name">Como funciona</span></div></li>
-                        <li class="file"><div class="file-link" data-content-id="sintaxe-basica"><span class="file-name">Parte básica / Sintaxe</span></div></li>
-                        <li class="file"><div class="file-link" data-content-id="exemplos-praticos"><span class="file-name">Exemplos práticos</span></div></li>
-                        <li class="file"><div class="file-link" data-content-id="boas-praticas"><span class="file-name">Boas práticas / Dicas</span></div></li>
+                        <li class="file">
+                            <div class="file-link active" data-content-id="o-que-e">
+                                <span class="file-name">O que é</span>
+                            </div>
+                        </li>
+                        <li class="file">
+                            <div class="file-link" data-content-id="historia-evolucao">
+                                <span class="file-name">História / Evolução</span>
+                            </div>
+                        </li>
+                        <li class="file">
+                            <div class="file-link" data-content-id="como-funciona">
+                                <span class="file-name">Como funciona</span>
+                            </div>
+                        </li>
+                        <li class="file">
+                            <div class="file-link" data-content-id="sintaxe-basica">
+                                <span class="file-name">Parte básica / Sintaxe</span>
+                            </div>
+                        </li>
+                        <li class="file">
+                            <div class="file-link" data-content-id="exemplos-praticos">
+                                <span class="file-name">Exemplos práticos</span>
+                            </div>
+                        </li>
+                        <li class="file">
+                            <div class="file-link" data-content-id="boas-praticas">
+                                <span class="file-name">Boas práticas / Dicas</span>
+                            </div>
+                        </li>
                     </ul>
                 </li>
             </ul>
+
+            <!-- Slide switch para alternar tema -->
+            <div class="theme-switch">
+                <label class="switch">
+                    <input type="checkbox" id="theme-toggle">
+                    <span class="slider round"></span>
+                </label>
+                <span class="switch-label">Tema Claro</span>
+            </div>
         </aside>
+
 
         <!-- Área principal de conteúdo -->
         <main class="content">
