--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
                     </div>
                 </li>
             </ul>
+
+            <!-- Slide switch para alternar tema -->
+            <div class="theme-switch">
+                <label class="switch">
+                    <input type="checkbox" id="theme-toggle">
+                    <span class="slider round"></span>
+                </label>
+                <span class="switch-label">Tema Claro</span>
+            </div>
         </aside>
 
         <!-- Área principal do conteúdo -->
