Adicione status personalizado para cada tópico

--- a/html.html
+++ b/html.html
@@ -30,38 +30,39 @@
                     <!-- Subitens do módulo HTML -->
                     <ul class="sub-items visible" data-module="html">
                         <li class="file">
-                            <div class="file-link active" data-content-id="o-que-e">
+                            <div class="file-link active" data-content-id="o-que-e" data-status="Aprendendo o que é HTML">
                                 <span class="file-name">O que é</span>
                             </div>
                         </li>
                         <li class="file">
-                            <div class="file-link" data-content-id="historia-evolucao">
+                            <div class="file-link" data-content-id="historia-evolucao" data-status="Explorando a História e Evolução do HTML">
                                 <span class="file-name">História / Evolução</span>
                             </div>
                         </li>
                         <li class="file">
-                            <div class="file-link" data-content-id="como-funciona">
+                            <div class="file-link" data-content-id="como-funciona" data-status="Entendendo como o HTML funciona por dentro">
                                 <span class="file-name">Como funciona</span>
                             </div>
                         </li>
                         <li class="file">
-                            <div class="file-link" data-content-id="sintaxe-basica">
+                            <div class="file-link" data-content-id="sintaxe-basica" data-status="Aprendendo a sintaxe básica do HTML">
                                 <span class="file-name">Parte básica / Sintaxe</span>
                             </div>
                         </li>
                         <li class="file">
-                            <div class="file-link" data-content-id="exemplos-praticos">
+                            <div class="file-link" data-content-id="exemplos-praticos" data-status="Vendo exemplos práticos de HTML">
                                 <span class="file-name">Exemplos práticos</span>
                             </div>
                         </li>
                         <li class="file">
-                            <div class="file-link" data-content-id="boas-praticas">
+                            <div class="file-link" data-content-id="boas-praticas" data-status="Boas práticas e dicas de HTML">
                                 <span class="file-name">Boas práticas / Dicas</span>
                             </div>
                         </li>
                     </ul>
                 </li>
             </ul>
+
 
             <!-- Slide switch para alternar tema -->
             <div class="theme-switch">
@@ -275,6 +276,11 @@
             </section>
         </main>
     </div>
+
+    <!-- Barra inferior (status) -->
+    <footer class="bottombar">
+        <span>Status: Pronto</span>
+    </footer>
 
     <!-- Script principal (interatividade da navegação lateral e troca de seções) -->
     <script src="script.js"></script>
