--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="file-tree">
                 <!-- Arquivo ativo -->
                 <li class="file">
-                    <a href="index.html" class="file-link active">
+                    <a href="index.html" class="file-link active" data-status="Pronto para começar a jornada">
                         <img src="icons/vscode.svg" alt="Ícone do Index" class="icon-svg">
                         <span class="file-name">index</span>
                     </a>
@@ -32,7 +32,7 @@
 
                 <!-- Pastas dos módulos -->
                 <li class="folder closed">
-                    <div class="folder-header file-link" data-href="html.html">
+                    <div class="folder-header file-link" data-href="html.html" data-status="Abrir módulo HTML: Estrutura e Semântica">
                         <span class="folder-arrow">▸</span>
                         <img src="icons/html.svg" alt="Ícone HTML" class="icon-svg">
                         <span class="file-name">HTML</span>
@@ -40,7 +40,7 @@
                 </li>
 
                 <li class="folder closed">
-                    <div class="folder-header file-link" data-href="css.html">
+                    <div class="folder-header file-link" data-href="css.html" data-status="Abrir módulo CSS: Estilização e Layouts">
                         <span class="folder-arrow">▸</span>
                         <img src="icons/css.svg" alt="Ícone CSS" class="icon-svg">
                         <span class="file-name">CSS</span>
@@ -48,7 +48,7 @@
                 </li>
 
                 <li class="folder closed">
-                    <div class="folder-header file-link" data-href="js.html">
+                    <div class="folder-header file-link" data-href="js.html" data-status="Abrir módulo JavaScript: Lógica e DOM">
                         <span class="folder-arrow">▸</span>
                         <img src="icons/javascript.svg" alt="Ícone JavaScript" class="icon-svg">
                         <span class="file-name">JavaScript</span>
@@ -56,7 +56,7 @@
                 </li>
 
                 <li class="folder closed">
-                    <div class="folder-header file-link" data-href="backend.html">
+                    <div class="folder-header file-link" data-href="backend.html" data-status="Abrir módulo Backend: Servidor e Banco de Dados">
                         <span class="folder-arrow">▸</span>
                         <img src="icons/database.svg" alt="Ícone Backend" class="icon-svg">
                         <span class="file-name">Backend</span>
@@ -130,7 +130,7 @@
         </main>
     </div>
 
-    <!-- Barra inferior com status -->
+    <!-- Barra inferior (status) -->
     <footer class="bottombar">
         <span>Status: Pronto</span>
     </footer>
