Adicionando editor de código

--- a/index.html
+++ b/index.html
@@ -62,7 +62,18 @@
                         <span class="file-name">Backend</span>
                     </div>
                 </li>
+
+                <li class="folder closed">
+                    <div class="folder-header file-link" data-href="editor.html" data-status="Abrir Editor de Código: Teste suas habilidades">
+                        <span class="folder-arrow">▸</span>
+                        <img src="icons/bash.svg" alt="Ícone Editor" class="icon-svg">
+                        <span class="file-name">Editor de Código</span>
+                    </div>
+                </li>
             </ul>
+
+
+
 
             <!-- Slide switch para alternar tema -->
             <div class="theme-switch">
