Arrumando bug no editor.html e melhorando script.js

--- a/editor.html
+++ b/editor.html
@@ -120,13 +120,9 @@
                     </div>
                     <ul class="sub-items visible" data-module="html">
                         <li class="file">
-                            <!-- corrigido: data-content-id e href -->
-                            <a href="inde.html"
-                               class="file-link active"
-                               data-content-id="editor-html"
-                               data-status="Aprendendo na prática">
+                             <div class="file-link active" data-content-id="o-que-e-css" data-status="Aprendendo o que é CSS">
                                 <span class="file-name">Área de testes</span>
-                            </a> 
+                            </div>
                         </li>
                     </ul>
                 </li>
