Alterando ícone do editor de código

--- a/editor.html
+++ b/editor.html
@@ -111,7 +111,7 @@
                 <li class="folder open" aria-expanded="true"> 
                     <div class="folder-header file-link" data-href="index.html">
                         <span class="folder-arrow">▸</span>
-                        <img src="icons/bash.svg" alt="Ícone de pasta de módulo" class="icon-svg" />
+                        <img src="icons/editor.svg" alt="Ícone de pasta de módulo" class="icon-svg" />
                         <span class="file-name">Editor de código</span>
                     </div>
                     <ul class="sub-items visible" data-module="html">
