--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <li class="folder closed">
                     <div class="folder-header file-link" data-href="editor.html" data-status="Abrir Editor de Código: Teste suas habilidades">
                         <span class="folder-arrow">▸</span>
-                        <img src="icons/bash.svg" alt="Ícone Editor" class="icon-svg">
+                        <img src="icons/editor.svg" alt="Ícone Editor" class="icon-svg">
                         <span class="file-name">Editor de Código</span>
                     </div>
                 </li>
